Fix a bug for dark mode

--- a/notes.css
+++ b/notes.css
@@ -45,6 +45,7 @@ body {
 
 .save:hover {
     background-color: #eb4336;
+    cursor: pointer;
 }
 
 .buttonMenu {
@@ -52,14 +53,13 @@ body {
     margin: 0 auto;
 }
 
-.button, .save{
+.button, .save {
     color: var(--secondary-color);
-    background-color: var(--primary-color);
+    background-color: transparent;
     border: var(--secondary-color) solid 1px;
     padding: 7px;
     margin: 0.5px;
-    transition-timing-function: ease-in-out;
-    transition-duration: 1s;
+    transition: color 1s ease-in-out, border 1s ease-in-out;
 }
 
 .button:hover {
